format index page

--- a/template/pages/index.twig
+++ b/template/pages/index.twig
@@ -1,6 +1,6 @@
 {% extends "layout/base.twig" %}
 
-{% from "macros.twig" import class_item, class_item, class_name, class_type, member_signature %}
+{% from "macros.twig" import markdown_path, class_item, class_item, class_name, class_type, member_signature %}
 
 {% block title %}
 {% set title = "Index" %}
@@ -8,32 +8,29 @@
 {% endblock %}
 
 {% block content %}
-Letters
----------
+### Letters
 {% for letter in 'A'..'Z' %}
 {% if items[letter] is defined and items[letter]|length > 1 %}
- * {{ letter }}
-{% else %}
- * {{ letter }}
+ * [{{ letter }}](#{{ letter|lower }})
 {% endif %}
 {% endfor %}
 
 
-{% for letter, elements in items -%}
-
+{% for letter, elements in items %}
 
 ### {{ letter }}
 
-{%- for element in elements %}
+{% for element in elements %}
 {%- set type = element[0] %}
-{%- set value = element[1] %}
-{%- if 'class' == type -%}
- * {{ class_name(value, true) }}{% if has_namespaces %} &mdash; _Class in namespace {{ (value.namespace) }}_{% endif %} {{ value.shortdesc|desc(value) }}
-{%- elseif 'method' == type -%}
- * {{ (value) }}() &mdash; _Method in class {{ (value.class) }}_ {{ value.shortdesc|desc(value.class) }}
-{%- elseif 'property' == type -%}
- * ${{ (value) }} &mdash; _Property in class {{ (value.class) }}_ {{ value.shortdesc|desc(value.class) }}
-{%- endif %}
-{%- endfor %}
-{%- endfor %}
+{%set value = element[1] %}
+{% if 'class' == type %}
+- {{ class_name(value, true) }}{% if has_namespaces %} &mdash; _Class in namespace_ [`{{ value.namespace }}`]({{ namespace_path(value.namespace)|replace({".html": ""}) }})
+{% endif %}
+{% elseif 'method' == type %}
+- [`{{ value.name }}()`]({{ markdown_path(class_path(value.class)) }}#{{ value.name }}) &mdash; _Method in class_ {{ class_name(value.class, true) }}
+{% elseif 'property' == type %}
+- [`${{ value.name }}()`]({{ markdown_path(class_path(value.class)) }}#${{ value.name }}) &mdash; _Property in class_ {{ class_name(value.class, true) }}
+{% endif %}
+{% endfor %}
+{% endfor %}
 {% endblock %}
