--- a/template/hooks.twig
+++ b/template/hooks.twig
@@ -3,15 +3,14 @@ Hooks
 
 This is a complete list of available hooks.
 
-# Categories
+## Categories
+
 {% set currentCategory = '' %}
 {% for hook in hooks %}
 {% if (hook.category) != (currentCategory) %}{% set currentCategory = hook.category %}
-## [{{ hook.category }}](#{{ hook.category|lower }})
+- [{{ hook.category }}](#{{ hook.category|lower }})
 {% endif %}
 {% endfor %}
-
-# Hooks
 
 {% set currentCategory = '' %}
 {% for hook in hooks %}
@@ -19,7 +18,7 @@ This is a complete list of available hooks.
 ## {{ hook.category }}
 {% endif %}
 
-### {{ hook.name }}
+#### {{ hook.name }}
 _Defined in [{{ hook.namespace }}/{{ hook.class }}](https://github.com/piwik/piwik/blob/master/{{ hook.file }}) in line [{{ hook.line }}](https://github.com/piwik/piwik/blob/master/{{ hook.file }}#L{{ hook.line }})_
 
 {% if hook.comment %}
