do not style longDesc comment differently

--- a/template/hooks.twig
+++ b/template/hooks.twig
@@ -22,10 +22,11 @@ This is a complete list of available hooks.
 _Defined in [{{ hook.namespace }}/{{ hook.class }}](https://github.com/piwik/piwik/blob/master/{{ hook.file }}) in line [{{ hook.line }}](https://github.com/piwik/piwik/blob/master/{{ hook.file }}#L{{ hook.line }})_
 
 {% if hook.comment %}
-{{ hook.comment.shortDesc }}{% if hook.comment.longDesc %} _{{ hook.comment.longDesc }}_{% endif %}
+{{ hook.comment.shortDesc }}{% if hook.comment.longDesc %} {{ hook.comment.longDesc }}{% endif %}
 {% endif %}
 
 {% if hook.arguments %}
+
 Arguments:
 <pre><code>{{ hook.arguments|join(', ') }}</code></pre>
 {% endif %}
