--- a/template/hooks.twig
+++ b/template/hooks.twig
@@ -27,7 +27,7 @@ _Defined in [{{ hook.namespace }}/{{ hook.class }}](https://github.com/piwik/piw
 
 {% if hook.arguments %}
 
-Arguments:
+Callback Signature:
 <pre><code>{{ hook.arguments|join(', ') }}</code></pre>
 {% endif %}
 
