do not display pending and plugins param of PostEvent and display function instead of array in signature

--- a/template/hooks.twig
+++ b/template/hooks.twig
@@ -28,7 +28,7 @@ _Defined in [{{ hook.namespace }}/{{ hook.class }}](https://github.com/piwik/piw
 {% if hook.arguments %}
 
 Callback Signature:
-<pre><code>{{ hook.arguments|join(', ') }}</code></pre>
+<pre><code>{{ hook.arguments|replace({'array(': 'function('}) }}</code></pre>
 {% endif %}
 
 {% endfor %}
