--- a/template/hooks.twig
+++ b/template/hooks.twig
@@ -63,7 +63,7 @@ This is a complete list of available hooks.
 {% endif %}
 
 #### {{ hook.name }}
-_Defined in [{{ hook.namespace }}/{{ hook.class }}](https://github.com/piwik/piwik/blob/master/{{ hook.file }}) in line [{{ hook.line }}](https://github.com/piwik/piwik/blob/master/{{ hook.file }}#L{{ hook.line }})_
+_Defined in [{{ hook.namespace }}/{{ hook.class }}](https://github.com/piwik/piwik/blob/master{{ hook.file }}) in line [{{ hook.line }}](https://github.com/piwik/piwik/blob/master{{ hook.file }}#L{{ hook.line }})_
 
 {% if hook.comment %}
 {{ hook.comment.shortDesc|raw }}{% if hook.comment.longDesc %} {{ hook.comment.longDesc|raw }}{% endif %}
@@ -73,6 +73,15 @@ _Defined in [{{ hook.namespace }}/{{ hook.class }}](https://github.com/piwik/piw
 
 Callback Signature:
 <pre><code>{{ hook.arguments|replace({'array(': 'function('}) }}</code></pre>
+{% endif %}
+{% if hook.usages %}
+
+Usages:
+
+{% for usage in hook.usages -%}
+[{{ usage.className }}::{{ usage.methodName }}](https://github.com/piwik/piwik/blob/master{{ usage.file }}#L{{ usage.startLine }}){% if not loop.last%}, {% endif %}
+{% endfor %}
+
 {% endif %}
 
 {% endfor %}
