--- a/app/templates/documentation.twig
+++ b/app/templates/documentation.twig
@@ -1,8 +1,8 @@
 {% extends 'layout/base.twig' %}
 
 {% block content %}
-    <div class="col-md-4">
-        <ul class="nav nav-list bs-docs-sidenav affix">
+    <div class="col-md-3">
+        <ul class="nav nav-pills nav-stacked">
             <li class="active"><a href="#introduction"><i class="icon-chevron-right"></i> Introduction</a></li>
             <li><a href="#plugins"><i class="icon-chevron-right"></i> Plugins</a></li>
             <li class=""><a href="#themes"><i class="icon-chevron-right"></i> Themes</a></li>
@@ -12,5 +12,8 @@
             <li><a href="#faq"><i class="icon-chevron-right"></i> FAQ</a></li>
             <li><a href="#use-cases"><i class="icon-chevron-right"></i> Use cases</a></li>
         </ul>
+    </div>
+    <div class="col-md-9">
+        {{ documentation|raw }}
     </div>
 {% endblock %}
