--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -13,7 +13,7 @@
     <script src="/js/respond.min.1.3.0.js"></script>
     <![endif]-->
 </head>
-<body>
+<body style="padding-top: 80px;">
 
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
