added possibility to browse api reference

--- a/app/templates/apireference.twig
+++ b/app/templates/apireference.twig
@@ -1,7 +1,7 @@
 {% extends 'layout/base.twig' %}
 
 {% block content %}
-    {% for url,item in menu %}
+    {% for url,item in references %}
         <div class="col-md-4">
             <h2>{{ item.title }}</h2>
             <p>{{ item.description }}</p>
