moved documentation menu to documentation class and have a separate one for index

--- a/app/templates/index.twig
+++ b/app/templates/index.twig
@@ -21,7 +21,7 @@
 
 {% block content %}
     <div class="row">
-        {% for url,item in menu %}
+        {% for item in menu %}
             <div class="col-md-4">
                 <h2>{{ item.title }}</h2>
                 <p>{{ item.description }}</p>
