open external links in new window

--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -36,8 +36,8 @@
                 <li><a href="/documentation">Documentation</a></li>
                 <li><a href="/api-reference">API Reference</a></li>
                 <li><a href="/support">Support</a></li>
-                <li><a href="https://github.com/piwik/piwik">GitHub</a></li>
-                <li><a href="http://piwik.org">Piwik</a></li>
+                <li><a href="https://github.com/piwik/piwik" target="_blank">GitHub</a></li>
+                <li><a href="http://piwik.org" target="_blank">Piwik</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
