--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
-                <li><a href="/documentation">Documentation</a></li>
+                <li><a href="/guides">Guides</a></li>
                 <li><a href="/api-reference">API Reference</a></li>
                 <li><a href="/support">Support</a></li>
                 <li><a href="https://github.com/piwik/piwik" target="_blank">GitHub</a></li>
