--- a/app/templates/index.twig
+++ b/app/templates/index.twig
@@ -1,6 +1,6 @@
 {% extends 'layout/base.twig' %}
 
-{% block intro %}
+{% block headline %}
     <style type="text/css">
         body {
             padding-top: 40px;
