--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -43,7 +43,12 @@
     </div>
 </div>
 
-{% block intro %}
+{% block headline %}
+    <div class="container">
+        <div class="col-md-12">
+            <h1>{{ title }}</h1>
+        </div>
+    </div>
 {% endblock %}
 
 <div class="container">
