highlight current active menu items and display sections within a guide

--- a/app/templates/documentation.twig
+++ b/app/templates/documentation.twig
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-    {% for url,item in menu %}
+    {% for url,item in guides %}
         <div class="col-md-4">
             <h2>{{ item.title }}</h2>
             <p>{{ item.description }}</p>
