--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -19,7 +19,7 @@
         }
     </style>
 </head>
-<body>
+<body data-spy="scroll" data-target="#sidebar">
 
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
@@ -67,8 +67,8 @@
     </footer>
 </div>
 
-
 <script src="/js/jquery.js"></script>
 <script src="/js/bootstrap.min.js"></script>
+<script src="/js/app.js"></script>
 </body>
 </html>
