--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/css/app.css" rel="stylesheet" media="screen">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -13,11 +14,6 @@
     <script src="/js/respond.min.1.3.0.js"></script>
     <![endif]-->
 
-    <style type="text/css">
-        body {
-            padding-top: 80px;
-        }
-    </style>
 </head>
 <body data-spy="scroll" data-target="#sidebar">
 
