--- a/app/templates/index.twig
+++ b/app/templates/index.twig
@@ -1,4 +1,5 @@
 {% extends 'layout/base.twig' %}
+{% from "macros.twig" import teaser_list %}
 
 {% block headline %}
     <style type="text/css">
@@ -17,13 +18,6 @@
 
 {% block content %}
     <div class="row">
-        {% for item in menu %}
-            <div class="col-md-4">
-                <h2>{{ item.title }}</h2>
-                <p>{{ item.description }}</p>
-                <p><a class="btn btn-default" href="{{ item.url }}" role="button">View details &raquo;</a></p>
-            </div>
-        {% endfor %}
+        {{ teaser_list(menu) }}
     </div>
-
 {% endblock %}
