--- a/app/templates/apireference.twig
+++ b/app/templates/apireference.twig
@@ -1,4 +1,5 @@
 {% extends 'layout/base.twig' %}
+{% from "macros.twig" import teaser_list %}
 
 {% block headline %}
     {% set title = 'API Reference' %}
@@ -6,11 +7,5 @@
 {% endblock %}
 
 {% block content %}
-    {% for url,item in references %}
-        <div class="col-md-4">
-            <h2>{{ item.title }}</h2>
-            <p>{{ item.description }}</p>
-            <p><a class="btn btn-default" href="{{ item.url }}" role="button">View details &raquo;</a></p>
-        </div>
-    {% endfor %}
+    {{ teaser_list(references) }}
 {% endblock %}
