--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -45,7 +45,7 @@
     {% if title is defined and title %}
         <div class="container">
             <div class="col-md-12">
-                <h1>{{ title }}</h1>
+                <div class="page-header"><h1>{{ title }}</h1></div>
             </div>
         </div>
     {% endif %}
