--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -7,6 +7,10 @@ body {
     padding-bottom: 48px;
 }
 
+#sidebar .panel-body {
+    padding:0px;
+}
+
 #sidebar .panel-heading {
     background-color: #f7f5fa;
     display: none;
@@ -30,8 +34,6 @@ body {
 
 /* First level of nav */
 .bs-sidenav {
-    margin-top: 30px;
-    margin-bottom: 30px;
     padding-top:    10px;
     padding-bottom: 10px;
     text-shadow: 0 1px 0 #fff;
@@ -43,7 +45,7 @@ body {
 .bs-sidebar .nav > li > a {
     display: block;
     color: #716b7a;
-    padding: 5px 20px;
+    padding: 5px 15px;
 }
 .bs-sidebar .nav > li > a:hover,
 .bs-sidebar .nav > li > a:focus {
@@ -68,7 +70,7 @@ body {
 .bs-sidebar .nav .nav > li > a {
     padding-top:    3px;
     padding-bottom: 3px;
-    padding-left: 30px;
+    padding-left: 25px;
     font-size: 90%;
 }
 
