--- a/app/templates/layout/documentation.twig
+++ b/app/templates/layout/documentation.twig
@@ -7,9 +7,9 @@
         {% if sectionTitle %}
             <div class="panel-heading">{{ sectionTitle }}</div>
         {% endif %}
-        <div class="panel-body" style="padding:0px;">
+        <div class="panel-body">
 
-            <ul class="nav nav-pills nav-stacked bs-sidenav" style="margin:0px">
+            <ul class="nav nav-pills nav-stacked bs-sidenav">
                 {% for section in sections %}
                     <li>
                         <a href="#{{ section.id }}"><i class="icon-chevron-right"></i> {{ section.title }}</a>
