--- a/app/templates/layout/documentation.twig
+++ b/app/templates/layout/documentation.twig
@@ -5,20 +5,20 @@
     <div class="col-md-3">
     <div id="sidebar" class="bs-sidebar panel panel-default">
         {% if sectionTitle %}
-            <div class="panel-heading">{{ sectionTitle }}</div>
+            <div class="panel-heading">{{ sectionTitle|e|replace({'/': '/&#8203;'})|raw }}</div>
         {% endif %}
         <div class="panel-body">
 
             <ul class="nav nav-pills nav-stacked bs-sidenav">
                 {% for section in sections %}
                     <li>
-                        <a href="#{{ section.id }}"><i class="icon-chevron-right"></i> {{ section.title }}</a>
+                        <a href="#{{ section.id }}"><i class="icon-chevron-right"></i> {{ section.title|striptags }}</a>
 
                         {% if section.children|length %}
                             <ul class="nav">
 
                             {% for subsection in section.children %}
-                                <li><a href="#{{ subsection.id }}">{{ subsection.title }}</a></li>
+                                <li><a href="#{{ subsection.id }}">{{ subsection.title|striptags }}</a></li>
                             {% endfor %}
 
                             </ul>
