--- a/app/templates/layout/documentation.twig
+++ b/app/templates/layout/documentation.twig
@@ -11,7 +11,7 @@
 
             <ul class="nav nav-pills nav-stacked bs-sidenav">
                 {% for section in sections %}
-                    <li>
+                    <li {% if sections|length == 1 %} class="active"{% endif %}>
                         <a href="#{{ section.id }}"><i class="icon-chevron-right"></i> {{ section.title|striptags }}</a>
 
                         {% if section.children|length %}
