--- a/app/templates/layout/documentation.twig
+++ b/app/templates/layout/documentation.twig
@@ -28,7 +28,7 @@
             </ul>
     </div>    </div>
     </div>
-    <div class="col-md-9">
+    <div class="col-md-9 documentation">
         {{ doc|raw }}
     </div>
 {% endblock %}
