allow wrap in code blocks and keep line-breaks

--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -13,6 +13,10 @@ body {
     border-bottom: 1px solid #eeeeee;
 }
 
+.documentation code {
+    white-space: pre;
+}
+
 #sidebar .panel-body {
     padding:0px;
 }
