--- a/generator/template/hooks.twig
+++ b/generator/template/hooks.twig
@@ -72,7 +72,7 @@ Callback Signature:
 <pre><code>{{ hook.arguments|replace({'array(': 'function('}) }}</code></pre>
 {% if hook.comment and hook.comment.params %}
 {% for param in hook.comment.params %}
-- {% if param[0] and param[0][0] and param[0][0][0] %}`{{ param[0][0][0] }}`{% endif %}{% if param[1] %} `${{ param[1] }}`{% endif %}{% if param[1] %} {{ param[2] }}{% endif %}
+- {% if param[0] and param[0][0] and param[0][0][0] %}`{{ param[0][0][0] }}`{% endif %}{% if param[1] %} `${{ param[1] }}`{% endif %}{% if param[1] %} {{ param[2]|raw }}{% endif %}
 
 {% endfor %}
 {% endif %}
