--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -49,6 +49,7 @@ body {
     text-shadow: 0 1px 0 #fff;
     background-color: #f7f5fa;
     border-radius: 5px;
+    overflow: hidden;
 }
 
 /* All levels of nav */
