--- a/generator/template/pages/class.twig
+++ b/generator/template/pages/class.twig
@@ -17,7 +17,7 @@
 Description
 -----------
 
-{{ class.longdesc }}
+{{ class.longdesc|raw }}
 {% endif %}
 
 {% if class.constants %}
@@ -28,14 +28,14 @@ Constants
 This {{ class_type(class) }} defines the following constants:
 
 {% for constant in class.constants %}
-- [`{{ constant.name }}`](#{{ constant.name }}){% if constant.shortdesc %} &mdash; {{ constant.shortdesc }}{% endif %}
+- [`{{ constant.name }}`](#{{ constant.name }}){% if constant.shortdesc %} &mdash; {{ constant.shortdesc|raw }}{% endif %}
 
 {% endfor %}
 {% for constant in class.constants if constant.longdesc %}
 
 ### `{{ constant.name }}` <a name="{{ constant.name }}"></a>
 
-{{ constant.longdesc }}
+{{ constant.longdesc|raw }}
 {% endfor %}
 {% endif %}
 {% if class.properties %}
@@ -46,7 +46,7 @@ Properties
 This {{ class_type(class) }} defines the following properties:
 
 {% for property in class.properties %}
-- [`${{ property.name }}`](#${{ property.name }}){% if property.shortdesc %} &mdash; {{ property.shortdesc }}{% endif %}
+- [`${{ property.name }}`](#${{ property.name }}){% if property.shortdesc %} &mdash; {{ property.shortdesc|raw }}{% endif %}
 
 {% endfor %}
 {% for property in class.properties %}
@@ -54,13 +54,13 @@ This {{ class_type(class) }} defines the following properties:
 ### `${{ property.name }}` <a name="{{ property.name }}"></a>
 {% if property.shortdesc %}
 
-{{ property.shortdesc }}
+{{ property.shortdesc|raw }}
 {% endif %}
-{% if property.longdesc %}
+{% if property.longdesc|raw %}
 
 #### Description
 
-{{ property.longdesc }}
+{{ property.longdesc|raw }}
 {% endif %}
 
 #### Signature
@@ -76,7 +76,7 @@ Methods
 The {{ class_type(class) }} defines the following methods:
 
 {% for method in class.methods %}
-- [`{{ method.name }}()`](#{{ method.name }}){% if method.shortdesc %} &mdash; {{ method.shortdesc }}{% endif %}
+- [`{{ method.name }}()`](#{{ method.name }}){% if method.shortdesc %} &mdash; {{ method.shortdesc|raw }}{% endif %}
 
 {% endfor %}
 
@@ -84,13 +84,13 @@ The {{ class_type(class) }} defines the following methods:
 ### `{{ method.name }}()` <a name="{{ method.name }}"></a>
 {% if method.shortdesc %}
 
-{{ method.shortdesc }}
+{{ method.shortdesc|raw }}
 {% endif %}
 {% if method.longdesc %}
 
 #### Description
 
-{{ method.longdesc }}
+{{ method.longdesc|raw }}
 {% endif %}
 {% if method.tags("see") %}
 
