--- a/generator/template/pages/class.twig
+++ b/generator/template/pages/class.twig
@@ -33,7 +33,7 @@ This {{ class_type(class) }} defines the following constants:
 {% endfor %}
 {% for constant in class.constants if constant.longdesc %}
 
-<a name="{{ constant.name }}" id="{{ constant.name }}"></a>
+<a name="{{ constant.name|lower }}" id="{{ constant.name|lower }}"></a>
 ### `{{ constant.name }}`
 
 {{ constant.longdesc|raw }}
@@ -52,7 +52,7 @@ This {{ class_type(class) }} defines the following properties:
 {% endfor %}
 {% for property in class.properties %}
 
-<a name="{{ property.name }}" id="{{ property.name }}"></a>
+<a name="{{ property.name|lower }}" id="{{ property.name|lower }}"></a>
 ### `${{ property.name }}`
 {% if property.shortdesc %}
 
@@ -83,7 +83,7 @@ The {{ class_type(class) }} defines the following methods:
 {% endfor %}
 
 {% for method in class.methods %}
-<a name="{{ method.name }}" id="{{ method.name }}"></a>
+<a name="{{ method.name|lower }}" id="{{ method.name|lower }}"></a>
 ### `{{ method.name }}()`
 {% if method.shortdesc %}
 
