--- a/generator/template/pages/class.twig
+++ b/generator/template/pages/class.twig
@@ -28,7 +28,7 @@ Constants
 This {{ class_type(class) }} defines the following constants:
 
 {% for constant in class.constants %}
-- [`{{ constant.name }}`](#{{ constant.name }}){% if constant.shortdesc %} &mdash; {{ constant.shortdesc|raw }}{% endif %}
+- [`{{ constant.name }}`](#{{ constant.name|lower }}){% if constant.shortdesc %} &mdash; {{ constant.shortdesc|raw }}{% endif %}
 
 {% endfor %}
 {% for constant in class.constants if constant.longdesc %}
@@ -47,7 +47,7 @@ Properties
 This {{ class_type(class) }} defines the following properties:
 
 {% for property in class.properties %}
-- [`${{ property.name }}`](#${{ property.name }}){% if property.shortdesc %} &mdash; {{ property.shortdesc|raw }}{% endif %}
+- [`${{ property.name }}`](#${{ property.name|lower }}){% if property.shortdesc %} &mdash; {{ property.shortdesc|raw }}{% endif %}
 
 {% endfor %}
 {% for property in class.properties %}
@@ -78,7 +78,7 @@ Methods
 The {{ class_type(class) }} defines the following methods:
 
 {% for method in class.methods %}
-- [`{{ method.name }}()`](#{{ method.name }}){% if method.shortdesc %} &mdash; {{ method.shortdesc|raw }}{% endif %}
+- [`{{ method.name }}()`](#{{ method.name|lower }}){% if method.shortdesc %} &mdash; {{ method.shortdesc|raw }}{% endif %}
 
 {% endfor %}
 
