--- a/app/templates/index.twig
+++ b/app/templates/index.twig
@@ -10,8 +10,8 @@
 
     <div class="jumbotron">
         <div class="container">
-            <h1>Piwik Developer</h1>
-            <p>This is the official Piwik developer website where you find resources to extend Piwik.</p>
+            <h1>Code | Design | Innovate</h1>
+            <p>Here's the place for Piwik developers.</p>
         </div>
     </div>
 {% endblock %}
