--- a/generator/template/pages/class.twig
+++ b/generator/template/pages/class.twig
@@ -28,7 +28,7 @@ Constants
 This {{ class_type(class) }} defines the following constants:
 
 {% for constant in class.constants %}
-- {% if constant.longdesc %}[`{{ constant.name }}`](#{{ constant.name|lower }}){% else %}{{ constant.name }}{% endif %}{% if constant.shortdesc %} &mdash; {{ constant.shortdesc|raw }}{% endif %}
+- {% if constant.longdesc %}[`{{ constant.name }}`](#{{ constant.name|lower }}){% else %}`{{ constant.name }}`{% endif %}{% if constant.shortdesc %} &mdash; {{ constant.shortdesc|raw }}{% endif %}
 
 {% endfor %}
 {% for constant in class.constants if constant.longdesc %}
