--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -9,7 +9,7 @@ body {
 
 .documentation h1 {
     padding-bottom: 9px;
-    margin: 40px 0 20px;
+    margin: 0px 0 20px;
     border-bottom: 1px solid #eeeeee;
 }
 
@@ -17,13 +17,19 @@ body {
     white-space: pre;
 }
 
+#sidebar.panel-default {
+    border-color: #7cabd4;
+}
+
 #sidebar .panel-body {
     padding:0px;
 }
 
 #sidebar .panel-heading {
-    background-color: #f7f5fa;
+    border-color: #7cabd4;
+    background-color: #84b4dd;
     display: none;
+    color: #ffffff;
 }
 
 #sidebar.affix .panel-heading {
@@ -50,31 +56,34 @@ body {
 .bs-sidenav {
     padding-top:    10px;
     padding-bottom: 10px;
-    text-shadow: 0 1px 0 #fff;
-    background-color: #f7f5fa;
-    border-radius: 5px;
+    text-shadow: 0 1px 0 #7cabd4;
+    background-color: #84b4dd;
     overflow: hidden;
 }
 
 /* All levels of nav */
 .bs-sidebar .nav > li > a {
     display: block;
-    color: #716b7a;
+    color: #fff;
     padding: 5px 15px;
 }
 .bs-sidebar .nav > li > a:hover,
 .bs-sidebar .nav > li > a:focus {
     text-decoration: none;
-    background-color: #e5e3e9;
-    border-right: 1px solid #dbd8e0;
+    background-color: #357ebd;
+    border-right: 1px solid #357ebd;
 }
 .bs-sidebar .nav > .active > a,
 .bs-sidebar .nav > .active:hover > a,
 .bs-sidebar .nav > .active:focus > a {
     font-weight: bold;
-    color: #563d7c;
+    color: #555555;
     background-color: transparent;
-    border-right: 1px solid #563d7c;
+    border-right: 1px solid #357ebd;
+}
+
+.bs-sidebar .nav-pills>li>a {
+    border-radius: 0px;
 }
 
 /* Nav: second level (shown on .active) */
