added link to blog, twitter and github

--- a/app/templates/layout/base.twig
+++ b/app/templates/layout/base.twig
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/css/font-awesome.min.css" rel="stylesheet">
     <link href="/css/app.css" rel="stylesheet" media="screen">
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -34,8 +34,8 @@
                         <a href="{{ item.url }}">{{ item.title }}</a>
                     </li>
                 {% endfor %}
-                <li><a href="https://github.com/piwik/piwik" target="_blank">GitHub</a></li>
-                <li><a href="http://piwik.org" target="_blank">Piwik</a></li>
+                <li><a href="http://piwik.org/blog/category/development/" target="_blank">Blog</a></li>
+                <li><a href="http://piwik.org/" target="_blank">Piwik</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
