--- a/app/templates/index.twig
+++ b/app/templates/index.twig
@@ -23,4 +23,10 @@
 {% endblock %}
 
 {% block footer %}
+    <div class="container">
+        <div class="center-block social-footer">
+            <a href="https://twitter.com/piwik" target="_blank" class="btn btn-xs btn-twitter"><i class="fa fa-facebook"></i> | Twitter</a>
+            <a href="https://github.com/piwik" target="_blank" class="btn btn-xs btn-github"><i class="fa fa-github"></i> | GitHub</a>
+        </div>
+    </div>
 {% endblock %}
