--- a/app/templates/layout/documentation.twig
+++ b/app/templates/layout/documentation.twig
@@ -2,31 +2,67 @@
 
 {% block content %}
 
-    <div class="col-md-3">
-    <div id="sidebar" class="bs-sidebar panel panel-default">
-        {% if sectionTitle %}
-            <div class="panel-heading">{{ sectionTitle|e|replace({'/': '/&#8203;'})|raw }}</div>
-        {% endif %}
-        <div class="panel-body">
+    <div class="col-md-3 bs-side">
 
-            <ul class="nav nav-pills nav-stacked bs-sidenav">
-                {% for section in sections %}
-                    <li {% if sections|length == 1 %} class="active"{% endif %}>
-                        <a href="#{{ section.id }}"><i class="icon-chevron-right"></i> {{ section.title|striptags }}</a>
+        <div class="panel-group" id="sidebar">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                            {{ activeMenu }}
+                        </a>
+                    </h4>
+                </div>
+                <div id="collapseOne" class="panel-collapse collapse">
+                    <div class="panel-body">
 
-                        {% if section.children|length %}
-                            <ul class="nav">
-
-                            {% for subsection in section.children %}
-                                <li><a href="#{{ subsection.id }}">{{ subsection.title|striptags }}</a></li>
-                            {% endfor %}
-
+                        <div class="bs-sidebar">
+                            <ul class="nav nav-pills nav-stacked bs-sidenav">
+                                <li>
+                                    {% for cat in categories %}
+                                    <a href="{{ cat.url }}"> {{ cat.title }}</a>
+                                    {% endfor %}
+                                </li>
                             </ul>
-                        {% endif %}
-                    </li>
-                {% endfor %}
-            </ul>
-    </div>    </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+                            {{ sectionTitle|e|replace({'/': '/&#8203;'})|raw }}
+                        </a>
+                    </h4>
+                </div>
+
+                <div id="collapseTwo" class="panel-collapse collapse in">
+                    <div class="panel-body">
+
+                        <div class="bs-sidebar">
+                            <ul class="nav nav-pills nav-stacked bs-sidenav">
+                                {% for section in sections %}
+                                    <li {% if sections|length == 1 %} class="active"{% endif %}>
+                                        <a href="#{{ section.id }}"><i class="icon-chevron-right"></i> {{ section.title|striptags }}</a>
+
+                                        {% if section.children|length %}
+                                            <ul class="nav">
+
+                                            {% for subsection in section.children %}
+                                                <li><a href="#{{ subsection.id }}">{{ subsection.title|striptags }}</a></li>
+                                            {% endfor %}
+
+                                            </ul>
+                                        {% endif %}
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="col-md-9 documentation">
         {{ doc|raw }}
