--- a/generator/template/pages/classes.twig
+++ b/generator/template/pages/classes.twig
@@ -12,7 +12,7 @@
 This is a complete list of available classes:
 
 {% for class in classes if not class.interface %}
-{{ class_item(class) }}
+{{ class_item(class, false, "", true) }}
 {% else %}
 - There are no classes available.
 {% endfor %}
